netlify form done 2

--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
         <div class="contents">
           <h4>Get in touch</h4>
           <form id="contact-form" netlify>
+            <p class="hidden">
+              <label>
+                Don’t fill this out if you’re human: <input name="bot-field" />
+              </label>
+            </p>
             <input
               type="text"
               class="name"
@@ -319,6 +324,12 @@
             <div class="subscribe">
               <h6>Subscribe</h6>
               <form id="subscribe-form" netlify>
+                <p class="hidden">
+                  <label>
+                    Don’t fill this out if you’re human:
+                    <input name="bot-field" />
+                  </label>
+                </p>
                 <input
                   type="email"
                   name="subscription"
