finished except smbackground

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
 		/>
+		<link rel="shortcut icon" href="favicon.png" type="image/png" />
 	</head>
 	<body>
 		<div class="page-header">
