phone number etc. linked

--- a/index.html
+++ b/index.html
@@ -230,17 +230,31 @@
 					</div>
 					<div class="text">
 						<div class="address">
-							Door No. 11, B&B Building,
-							<br />
-							2nd Floor, Power House Road,
-							<br />
-							Palarivattom-25, Cochin, Kerala.
+							<a
+								href="https://www.google.com/maps/place/25,+Power+House+Rd,+Palarivattom,+Ernakulam,+Kerala+682565/@10.0054324,76.3017947,17z/data=!4m9!1m2!2m1!1sDoor+No.+11,+B%26B+Building,+2nd+Floor,+Power+House+Road,+Palarivattom-25,+Cochin,+Kerala.!3m5!1s0x3b080d1045cf9f93:0xa314fb832f06b382!8m2!3d10.005369!4d76.303962!15sClhEb29yIE5vLiAxMSwgQiZCIEJ1aWxkaW5nLCAybmQgRmxvb3IsIFBvd2VyIEhvdXNlIFJvYWQsIFBhbGFyaXZhdHRvbS0yNSwgQ29jaGluLCBLZXJhbGEukgEQZ2VvY29kZWRfYWRkcmVzc-ABAA"
+							>
+								Door No. 11, B&B Building,
+								<br />
+								2nd Floor, Power House Road,
+								<br />
+								Palarivattom-25, Cochin, Kerala.
+							</a>
 						</div>
 						<div class="phones">
-							<div class="phone">+91 889 390 8420</div>
+							<div class="phone">
+								<a href="tel:+918893908420">+91 889 390 8420</a>
+							</div>
 						</div>
-						<div class="whatsapp">+91 62822 87369</div>
-						<div class="email">ajfiresolutions22@gmail.com</div>
+						<div class="whatsapp">
+							<a href="https://wa.me/+916282287369" target="_blank"
+								>+91 62822 87369</a
+							>
+						</div>
+						<div class="email">
+							<a href="mailto:ajfiresolutions22@gmail.com" target="_blank"
+								>ajfiresolutions22@gmail.com</a
+							>
+						</div>
 					</div>
 				</div>
 			</div>
